[package]
name = "iterative_flashcard_system"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.10"
